# dock-mapper

./: index.html  package.json  pnpm-lock.yaml  readme.md  rsbuild.config.ts  updater.json  widget.html
.github/workflows/: release.yml
src/: App.tsx  global.css  main-entry.tsx  widget-entry.tsx  widget.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon  icon.icns
src-tauri/src/: admin.rs  config.rs  key_mapper.rs  lib.rs  main.rs  sys_monitor.rs  taskbar.rs
src/components/: Dashboard.tsx  GeneralSettings.tsx  KeyMapper.tsx  WidgetSettings.tsx
