[package]
name = "dock-mapper"
version = "1.0.0"
description = "DockMapper — Windows taskbar widget & key mapping tool"
authors = ["qqpp"]
edition = "2021"

[lib]
name = "dock_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
] }
sysinfo = "0.30"
rdev = { version = "0.5", features = ["unstable_grab"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5"
